Identify pill button is centered, navigation now has overflow-x: hidden to prevent horizontal scroll on mobile

--- a/src/scss/Navigation.scss
+++ b/src/scss/Navigation.scss
@@ -18,6 +18,7 @@ $pillborder: #ebecee;
 
   @media (max-width: 500px) {
     margin: 6px auto;
+    overflow-x: hidden;
   }
 
   .tab {
